--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ export(bulkCNVs)
 export(bulkLOHplot)
 export(caseCNVscore)
 export(cdt_filt_sort)
+export(cnvPlot1)
+export(cnvPlot2)
+export(cnvPlot3)
 export(cnvs)
 export(cnvsorted)
 export(fdrTumor)
@@ -19,6 +22,8 @@ export(newSptBC)
 export(nonZeRdCts)
 export(permutScore)
 export(proposTumLoup)
+export(quintilePlot)
+export(readsGrouped)
 export(spaPointMutation)
 export(splitSpot)
 export(spotSummary)
@@ -28,13 +33,23 @@ export(sptMutCt)
 export(wtArmMedianOne)
 import(dplyr)
 import(ggplot2)
+import(heatmap.2x)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(dendextend,cutree)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(futile.logger,flog.error)
 importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.warn)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(graphics,hist)
 importFrom(matrixStats,weightedMedian)
 importFrom(raster,pointDistance)
+importFrom(stats,as.dendrogram)
+importFrom(stats,dist)
+importFrom(stats,hclust)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stringi,stri_pad_left)
