--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,15 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Imports: 
+    dendextend,
     dplyr,
     futile.logger,
     ggplot2,
+    graphics,
+    heatmap.2x,
     matrixStats,
     raster,
+    RColorBrewer,
     stats,
     stringi,
     stringr,
